custom the user model fiels

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
   <head>
-  	<title>{% block title %}{% endblock title %} | Django Authentications Project</title>
+  	<title>{% block title %}{% endblock title %} Django Authentications Project</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
@@ -11,8 +11,9 @@
 	</head>
 	<body>
 	<section class="ftco-section">
+	
 		{% block content %}
-			
+
 		{% endblock content %}
 	</section>
     <script src="{% static 'js/jquery.min.js' %}"></script>
