--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -36,7 +36,7 @@
                             </label>
                         </div>
                         <div class="w-50 text-md-right">
-                            <a href="#">Forgot Password</a>
+                            <a href="{% url 'forgot-password' %}">Forgot Password</a>
                         </div>
                     </div>
                     <a href="{% url 'register' %}">You Don't have account!</a>
